# APP_AGNO

./: .env  agno_web.py  exemplo_ollama.py  inicio.py  main.py  playground_final.py  playground_simple.py  playground_web.py  pyproject.toml
